# crazybin

./: .gitignore  MANIFEST.in  README.md  checklist_release.md  pyproject.toml  streamlit_app.py  whats-new.md
.github/actions/setup_package/: action.yml
.github/workflows/: test.yml
examples/: custom_tile_object.py  frogs_gaussian.py  grande_jatte.py  great_wave.py  hex_rhomb.py  reptiles_sinewave.py
examples/tile_generation/: Hex.py  TriangleRhombs.py
src/crazybin/: __init__.py  crazybin.py  objects.py
src/crazybin/tiles/: frog.json  hex.json  hex_rhomb.json  reptile.json
